<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.DialogActivity"
    android:orientation="vertical">

    <com.jane.widget.titleBar.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:tb_text_size="12sp"
        app:tb_title_text="Dialog展示样式"
        app:tb_text_is_bold="false"
        app:tb_rightView_drawable="@drawable/ic_menu"
        app:tb_show_animate_type="translate_show" />

    <Button
        android:id="@+id/button_show_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@color/white"
        android:text="@string/dialog_show_bottom" />

    <Button
        android:id="@+id/button_show_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@color/white"
        android:text="@string/dialog_show_center" />

    <Button
        android:id="@+id/button_error_shake_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@color/white"
        android:text="@string/dialog_animal_error_shake" />

    <Button
        android:id="@+id/button_alpha_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@color/white"
        android:text="@string/dialog_animal_alpha" />

    <Button
        android:id="@+id/button_animal_combination_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@color/white"
        android:text="@string/dialog_animal_combination" />

    <Button
        android:id="@+id/button_animal_translate_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:background="@color/white"
        android:text="@string/dialog_animal_translate" />

</LinearLayout>